2009-03-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/document_glom.h: Added a SWIG hint telling it how to 
	include this header.

2009-03-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/bakery/Document.h: 
	* glom/libglom/document/bakery/Document_XML.h: Removed more unnecessary 
	virtuals.

2009-03-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.[h|cc]: Remove add_ui_from_string() because it is 
	in App_WithDoc_Gtk too.
	* glom/bakery/App_WithDoc_Gtk.h: Make init_menus_file_recentfiles() 
	non virtual because nothing overrides it.

2009-03-24  Murray Cumming <murrayc@murrayc.com>

	* glom/bakery/Makefile.am:
	* glom/bakery/App_WithDoc.h:
	* glom/bakery/App_Gtk.[h|cc]: Remove this, merging it into:
	* glom/bakery/App_WithDoc_Gtk.[h|cc]: allowing us to remove some 
	awkward virtual inheritance.
	* glom/bakery/Dialog_OfferSave.cc:
	* glom/application.cc:
	* glom/utility_widgets/adddel/adddel.cc: Adapted.

2009-03-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/bakery/Makefile.am:
	* glom/bakery/GtkDialogs.[h|cc]: Remove this, moving the code into 
	these functions that previously just called the same named functions 
	in GtkDialogs, for reasons that are no longer relevant:
	* glom/bakery/App_WithDoc_Gtk.cc ui_warning(),
	ui_file_select_open(), uri_is_writable(),
	ui_file_select_save(), ui_offer_to_save_changes().

2009-03-23  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/document_glom.[h|cc]: Added a load() that just calls 
	the base class, just to make life easier for SWIG, so it can ignore the base 
	class for client-only API.

2009-03-22  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.[h|cc]: new_instance(): Spawn a new process via a 
	a command line command.
	* glom/bakery/App.[h|cc]: new_instance(): Take a uri parameter.
	on_menu_file_new():
	* glom/bakery/App_WithDoc.cc: open_document():
	new_instance() is now expected to start a new process instead of 