@@ -18,8 +18,8 @@
 
 #include <config.h>
 
-#include <glom/bakery/App_WithDoc_Gtk.h>
-#include <glom/bakery/Dialog_OfferSave.h>
+#include <glom/bakery/app_withdoc_gtk.h>
+#include <glom/bakery/dialog_offersave.h>
 //#include <libgnomevfsmm/utils.h> //For escape_path_string()
 //#include <libgnomevfsmm/mime-handlers.h> //For type_is_known(). 
 #include <gtkmm/toolbutton.h>
