@@ -33,7 +33,7 @@
 #include <libglom/data_structure/system_prefs.h>
 #include <libglom/utils.h>
 #include <libglom/calcinprogress.h>
-#include <libglom/document/bakery/view/View.h>
+#include <libglom/document/bakery/view/view.h>
 #include <libglom/busy_cursor.h>
 
 namespace Glom
