@@ -17,7 +17,7 @@
  */
 
 #include <config.h>
-#include <libglom/document/bakery/Document.h>
+#include <libglom/document/bakery/document.h>
 #include <giomm.h>
 //#include <fstream>
 #include <glibmm/i18n-lib.h>
