@@ -16,7 +16,7 @@
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-#include <libglom/document/bakery/view/View.h>
+#include <libglom/document/bakery/view/view.h>
 
 namespace GlomBakery
 {
