@@ -1,5 +1,12 @@
 2009-03-24  Murray Cumming  <murrayc@murrayc.com>
 
+	* glom/bakery/:
+	* glom/libglom/document/bakery/: Rename the files to make them lower 
+	case just because the inconsistency has always annoyed me.
+	* glom/*.[h|cc]: Adapted.
+
+2009-03-24  Murray Cumming  <murrayc@murrayc.com>
+
 	* glom/libglom/document/document_glom.h: Added a SWIG hint telling it how to 
 	include this header.
 
